--- a/index.html
+++ b/index.html
@@ -14,28 +14,52 @@
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             line-height: 1.6;
-            color: #333;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: #e0e0e0;
+            background: #0a0a0a;
+            background-image:
+                radial-gradient(circle at 20% 50%, rgba(0, 255, 255, 0.05) 0%, transparent 50%),
+                radial-gradient(circle at 80% 80%, rgba(0, 200, 255, 0.05) 0%, transparent 50%),
+                radial-gradient(circle at 40% 10%, rgba(0, 150, 255, 0.03) 0%, transparent 50%);
             min-height: 100vh;
             padding: 20px;
+            position: relative;
+        }
+
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background:
+                linear-gradient(90deg, rgba(0, 255, 255, 0.03) 1px, transparent 1px),
+                linear-gradient(rgba(0, 255, 255, 0.03) 1px, transparent 1px);
+            background-size: 50px 50px;
+            pointer-events: none;
+            z-index: 0;
         }
 
         .container {
             max-width: 1200px;
             margin: 0 auto;
+            position: relative;
+            z-index: 1;
         }
 
         /* 头部区域 */
         .header {
-            background: rgba(255, 255, 255, 0.95);
+            background: rgba(15, 15, 25, 0.8);
+            border: 1px solid rgba(0, 255, 255, 0.3);
             border-radius: 20px;
             padding: 40px;
             margin-bottom: 30px;
-            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 10px 40px rgba(0, 255, 255, 0.1), inset 0 0 60px rgba(0, 255, 255, 0.03);
             display: flex;
             align-items: center;
             gap: 40px;
             flex-wrap: wrap;
+            backdrop-filter: blur(10px);
         }
 
         .avatar {
@@ -43,8 +67,8 @@
             height: 200px;
             border-radius: 50%;
             object-fit: cover;
-            border: 5px solid #667eea;
-            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
+            border: 3px solid rgba(0, 255, 255, 0.5);
+            box-shadow: 0 0 30px rgba(0, 255, 255, 0.4), 0 0 60px rgba(0, 200, 255, 0.2);
         }
 
         .header-content {
@@ -55,56 +79,63 @@
         .name {
             font-size: 2.5em;
             font-weight: 700;
-            background: linear-gradient(135deg, #667eea, #764ba2);
+            background: linear-gradient(135deg, #00ffff, #00c8ff);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
             margin-bottom: 10px;
+            text-shadow: 0 0 30px rgba(0, 255, 255, 0.5);
         }
 
         .title {
             font-size: 1.3em;
-            color: #666;
+            color: #00ffff;
             margin-bottom: 20px;
+            text-shadow: 0 0 10px rgba(0, 255, 255, 0.3);
         }
 
         .intro {
             font-size: 1.1em;
-            color: #555;
+            color: #b0b0b0;
             line-height: 1.8;
         }
 
         /* 卡片样式 */
         .card {
-            background: rgba(255, 255, 255, 0.95);
+            background: rgba(15, 15, 25, 0.6);
+            border: 1px solid rgba(0, 255, 255, 0.2);
             border-radius: 20px;
             padding: 30px;
             margin-bottom: 30px;
-            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: 0 10px 40px rgba(0, 255, 255, 0.1), inset 0 0 60px rgba(0, 255, 255, 0.02);
+            transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
+            backdrop-filter: blur(10px);
         }
 
         .card:hover {
             transform: translateY(-5px);
-            box-shadow: 0 15px 50px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 15px 50px rgba(0, 255, 255, 0.2), inset 0 0 80px rgba(0, 255, 255, 0.05);
+            border-color: rgba(0, 255, 255, 0.5);
         }
 
         .card-title {
             font-size: 1.8em;
             font-weight: 600;
-            color: #667eea;
+            color: #00ffff;
             margin-bottom: 20px;
             display: flex;
             align-items: center;
             gap: 10px;
+            text-shadow: 0 0 20px rgba(0, 255, 255, 0.4);
         }
 
         .card-title::before {
             content: '';
             width: 4px;
             height: 30px;
-            background: linear-gradient(135deg, #667eea, #764ba2);
+            background: linear-gradient(135deg, #00ffff, #00c8ff);
             border-radius: 2px;
+            box-shadow: 0 0 10px rgba(0, 255, 255, 0.6);
         }
 
         /* 技能标签 */
@@ -116,32 +147,42 @@
         }
 
         .skill-tag {
-            background: linear-gradient(135deg, #667eea, #764ba2);
-            color: white;
+            background: linear-gradient(135deg, rgba(0, 255, 255, 0.2), rgba(0, 200, 255, 0.2));
+            border: 1px solid rgba(0, 255, 255, 0.4);
+            color: #00ffff;
             padding: 8px 20px;
             border-radius: 20px;
             font-size: 0.9em;
             font-weight: 500;
+            box-shadow: 0 0 15px rgba(0, 255, 255, 0.2);
+            transition: all 0.3s ease;
+        }
+
+        .skill-tag:hover {
+            background: linear-gradient(135deg, rgba(0, 255, 255, 0.3), rgba(0, 200, 255, 0.3));
+            box-shadow: 0 0 25px rgba(0, 255, 255, 0.4);
+            transform: translateY(-2px);
         }
 
         /* 项目经验 */
         .project {
             margin-bottom: 25px;
             padding: 20px;
-            background: #f8f9fa;
+            background: rgba(0, 255, 255, 0.05);
             border-radius: 15px;
-            border-left: 4px solid #667eea;
+            border-left: 4px solid #00ffff;
+            box-shadow: -4px 0 20px rgba(0, 255, 255, 0.1);
         }
 
         .project-name {
             font-size: 1.3em;
             font-weight: 600;
-            color: #333;
+            color: #00ffff;
             margin-bottom: 10px;
         }
 
         .project-desc {
-            color: #666;
+            color: #b0b0b0;
             margin-bottom: 15px;
         }
 
@@ -150,7 +191,7 @@
         }
 
         .responsibilities h4 {
-            color: #667eea;
+            color: #00c8ff;
             margin-bottom: 10px;
             font-size: 1.1em;
         }
@@ -161,21 +202,25 @@
 
         .responsibilities li {
             margin-bottom: 8px;
-            color: #555;
+            color: #b0b0b0;
         }
 
         /* 成就区域 */
         .achievement {
-            background: linear-gradient(135deg, #667eea, #764ba2);
-            color: white;
+            background: linear-gradient(135deg, rgba(0, 255, 255, 0.15), rgba(0, 200, 255, 0.15));
+            border: 1px solid rgba(0, 255, 255, 0.3);
+            color: #e0e0e0;
             padding: 25px;
             border-radius: 15px;
             margin-bottom: 20px;
+            box-shadow: 0 0 30px rgba(0, 255, 255, 0.2);
         }
 
         .achievement h3 {
             font-size: 1.3em;
             margin-bottom: 10px;
+            color: #00ffff;
+            text-shadow: 0 0 15px rgba(0, 255, 255, 0.5);
         }
 
         /* 联系方式 */
@@ -188,27 +233,34 @@
         .contact-item {
             flex: 1;
             min-width: 200px;
-            background: linear-gradient(135deg, #667eea, #764ba2);
-            color: white;
+            background: linear-gradient(135deg, rgba(0, 255, 255, 0.1), rgba(0, 200, 255, 0.1));
+            border: 1px solid rgba(0, 255, 255, 0.3);
+            color: #e0e0e0;
             padding: 20px;
             border-radius: 15px;
             text-align: center;
             text-decoration: none;
-            transition: transform 0.3s ease;
+            transition: all 0.3s ease;
+            box-shadow: 0 0 20px rgba(0, 255, 255, 0.1);
         }
 
         .contact-item:hover {
             transform: scale(1.05);
+            background: linear-gradient(135deg, rgba(0, 255, 255, 0.2), rgba(0, 200, 255, 0.2));
+            box-shadow: 0 0 30px rgba(0, 255, 255, 0.3);
+            border-color: rgba(0, 255, 255, 0.6);
         }
 
         .contact-item h3 {
             font-size: 1.2em;
             margin-bottom: 10px;
+            color: #00ffff;
         }
 
         .contact-item p {
             font-size: 0.9em;
             opacity: 0.9;
+            color: #b0b0b0;
         }
 
         /* 响应式设计 */
